--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.69",
     "@types/react-dom": "18.2.22",
+    "axios": "^1.6.8",
     "eslint": "^8.0.1",
     "eslint-config-next": "14.1.4",
     "next": "14.1.4",
